<resources>
    <string name="app_name">Agenda</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MyAgenda</string>
    <string name="nav_header_subtitle">DAM Project</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="about">About</string>
    <string name="user">User</string>
    <string name="main_current_date_value">Selected Date %1$s</string>
    <string name="main_btn_view_events">View Events</string>
    <string name="hour_simple">0%1$d:00</string>
    <string name="hour_double">%1$d:00</string>
    <string name="view_day_events_btn_add">Add</string>
    <string name="btn_edit_event_text">Edit Event</string>
    <string name="btn_add_event_text">Add Event</string>
    <string name="tv_type_event_on_date">%1$s event</string>
    <string name="tiet_event_title">Event Title</string>
    <string name="til_details">Details</string>
    <string name="tv_start_time_ini">00:00</string>
    <string name="tv_start_time">Start Time</string>
    <string name="tv_duration_hours">Duration Hours:</string>
    <string name="add_modify_event_btn_save">Save</string>
    <string name="events_on">Events on %1$s</string>
    <string name="invalid_title_minim_3_characters">Titlul trebuie sa contina minim 3 caractere!</string>
    <string name="my_default_event">My Default Event</string>
    <string name="new_title">"New "</string>
    <string name="edit_title">"Edit "</string>
    <string name="date_format">%1$d-%2$d-%3$d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="frg_user_tv_user_info">User Info</string>
    <string name="dam_project">DAM Project</string>
    <string name="year_project">2023</string>
    <string name="developed_by">Developed by Daniel Constantin</string>
    <string name="img_calendar">img_calendar</string>
    <string name="user_password">password</string>
    <string name="user_email">email</string>
    <string name="content_descr_img_meet">img_meet</string>
    <string name="icon_meeting">Icon Meeting</string>
    <string name="event_adapter_default_value">-</string>
    <string name="empty_text" />
    <string name="rv_tv_title">Title</string>
    <string name="login_pref_file">login</string>
    <string name="asynctask_error">AsyncTask error</string>
    <string name="event_logo">event logo</string>
    <string name="go_signup">Not yet registered? <u>Sign Up</u></string>
    <string name="go_login">Already a user. <u>Login</u></string>
    <string name="view_day_events_btn_delete">Delete</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="empty_email">Email cannot be empty</string>
    <string name="signup_successfully">SignUp Successfully!</string>
    <string name="signup_failed">Signup Failed!</string>
    <string name="login_failed">Login Failed</string>
    <string name="invalid_email">Invalid e-mail</string>
</resources>