<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddModifyEvent">

    <TextView
        android:id="@+id/add_modify_tv_date_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="18dp"
        android:text="@string/tv_type_event_on_date"
         />
    <TextView
        android:id="@+id/add_modify_event_tv_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_start_time_ini"
        app:layout_constraintStart_toEndOf="@id/add_modify_event_tv_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_modify_tv_date_info"
        />
    <TextView
        android:id="@+id/add_modify_event_tv_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_start_time"
        app:layout_constraintEnd_toStartOf="@id/add_modify_event_tv_start_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_modify_tv_date_info"
        />

    <TextView
        android:id="@+id/add_modify_event_tv_durate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_duration_hours"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_modify_event_tv_start" />
    <NumberPicker
        android:id="@+id/add_modify_event_np_durate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/add_modify_event_tv_durate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_modify_event_til_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_modify_event_np_durate"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_modify_event_tiet_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiet_event_title"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_modify_event_til_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_modify_event_til_title"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_modify_event_tiet_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/til_details"
            android:maxLines="3" />
    </com.google.android.material.textfield.TextInputLayout>
    <RadioGroup
        android:id="@+id/add_modify_event_rg_event_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/add_modify_event_til_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/add_modify_event_rb_meeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Meeting"
            android:checked="true"
            />
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/add_modify_event_rb_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Task"/>
    </RadioGroup>

    <Button
        android:id="@+id/add_modify_event_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_modify_event_btn_save"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>