<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewDayEvents">

    <TextView
        android:id="@+id/view_day_events_tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/events_on"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
      />

    <ListView
        android:id="@+id/view_day_events_lv_day_event_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_day_events_tv_date"
        app:layout_constraintBottom_toTopOf="@id/view_day_events_btn_add"/>

    <Button
        android:id="@+id/view_day_events_btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/view_day_events_btn_add"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:text="@string/view_day_events_btn_delete"/>
    <Button
    android:id="@+id/view_day_events_btn_add"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toEndOf="@id/view_day_events_btn_delete"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_marginBottom="20dp"
    android:text="@string/view_day_events_btn_add"/>


</androidx.constraintlayout.widget.ConstraintLayout>