<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/lv_row_tv_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:text="@string/tv_start_time_ini"
        app:layout_constraintEnd_toStartOf="@id/lv_row_tv_img_task"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
       android:id="@+id/lv_row_tv_img_task"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="10dp"
        android:contentDescription="@string/event_logo"
       app:layout_constraintStart_toEndOf="@id/lv_row_tv_hour"
       app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/lv_row_tv_title"
        android:layout_marginStart="8dp"
       android:src="@drawable/baseline_task_24"
        android:layout_marginBottom="10dp"
       />

    <TextView
        android:id="@+id/lv_row_tv_title"
        style="@style/TextView"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:textSize="15sp"
        android:text="@string/rv_tv_title"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/lv_row_tv_img_task"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>